--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2018"
 
 [dependencies]
 nwg = { version = "^1.0.11", package = "native-windows-gui" }
-winapi = { version = "^0.3.9", features = ["wingdi"]}
+winapi = { version = "^0.3.9", features = ["wingdi"] }
 anyhow = "^1.0.40"
-indexmap = "^1.6.2"
+nom = "^6.1.2"
