--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ anyhow = "1.0.40"
 nom = "6.1.2"
 notify = "4.0.15"
 hotwatch = "0.4.5"
+toml = "0.5.8"
+serde = "1.0.125"
+serde_derive = "1.0.125"
